Philipp Thomas added to translator lists

--- a/pyspread/authors
+++ b/pyspread/authors
@@ -12,7 +12,7 @@ Translators
 Danish:                 Joe Hansen
 Dutch:                  Mark Haanen
 Ukrainian:              Yuri Chornoivan
-German:                 Mario Blättermann, Martin Manns, Christian Kirbach
+German:                 Mario Blättermann, Martin Manns, Christian Kirbach, Philipp Thomas
 Nowegian Nynorsk:       Andreas Noteng
 Nowegian Bokmaal:       Andreas Noteng
 Brazilian Portuguese:   Enrico Nicoletto
