Rafael Fontenelle added to translators

--- a/pyspread/authors
+++ b/pyspread/authors
@@ -15,5 +15,5 @@ Ukrainian:              Yuri Chornoivan
 German:                 Mario Blättermann, Martin Manns, Christian Kirbach, Philipp Thomas
 Nowegian Nynorsk:       Andreas Noteng
 Nowegian Bokmaal:       Andreas Noteng
-Brazilian Portuguese:   Enrico Nicoletto
+Brazilian Portuguese:   Enrico Nicoletto, Rafael Fontenelle
 French:                 Frédéric Marchal
