--- a/changelog
+++ b/changelog
@@ -3,6 +3,10 @@ Changelog for pyspread
 
 Note: This changelog starts at version 0.2.0
 
+1.1.2
+-----
+Linux: Font choice combo box fixed
+
 1.1.1
 -----
 
